# modelmaite

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/maite_models/: __init__.py
src/modelmaite/: __init__.py  _onnx.py
src/modelmaite/image_classification/: __init__.py  models.py
src/modelmaite/object_detection/: __init__.py  models.py  types.py
tests/: test_onnx_image_classification.py  test_onnx_object_detection.py  test_onnx_utils.py  test_placeholder.py  test_torchvision_image_classification.py  test_torchvision_object_detection.py  test_visdrone_object_detection.py
tests/data/jatic_onnx_od/: constant_detector.onnx  model-metadata.json
